fix whitespace issue after tr

--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,10 @@ th {
   max-width: 350px;
 }
 
+.hidden {
+  display: none;
+}
+
 input[type=text] {
   padding: 5px 5px;
   box-sizing: border-box;
